2008-07-21  Sven Herzberg  <sven@imendio.com>

	Use $(MAKE) instead of literal make; this way make can know that a
	command will invoke make again. Knowing this will help make to schedule
	parallel builds.

	* Makefile.plain: use $(MAKE) instead of literal make

2008-07-21  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/autobuild.py, jhbuild/versioncontrol/svn.py: don't
	let svn interact with the user when --no-interact is passed; and force
	non-interactive build for the autobuild command.  (closes: #543767)

2008-07-18  Sven Herzberg  <herzi@gnome-de.org>

	Bug #310541: patch to make mozilla 'make check' pass

	* jhbuild/config.py: added modules_makecheck option
	* jhbuild/defaults.jhbuildrc: declare modules_makecheck dictionary
	* jhbuild/modtypes/autotools.py: only run "make check" if it's not
	explicitly disabled per module

2008-07-18  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.24.modules: pangomm is now in its own 
	tarball (previously part of gtkmm).

2008-07-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/moduleset.py: fixed "module not
	found" error messages to display the module that was not found, patch
	by Behnam Esfahbod (closes: #543262); also cleaned up some conversion
	of exceptions to strings.

2008-07-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py: fixed checkbranches command to
	work with gnome-suites-x.yz as moduleset, and updated to use straight
	SVN URL instead of ViewVC.

	* modulesets/gnome-suites-2.22.modules: branched gnome-user-docs for
	GNOME 2.22.

2008-07-15  Sven Herzberg  <sven@imendio.com>

	Some debugging for autobuild and "distro" detection for osx

	* jhbuild/frontends/autobuild.py: some more debugging info
	* jhbuild/frontends/tinderbox.py: detect osx, too

2008-07-14  Cosimo Cecchi  <cosimoc@gnome.org>

	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	bug-buddy branched for 2.22.
