@@ -1,5 +1,11 @@
 2008-07-21  Sven Herzberg  <sven@imendio.com>
 
+	Support git-sbmodule
+
+	* jhbuild/versioncontrol/git.py: added git-submodule support
+
+2008-07-21  Sven Herzberg  <sven@imendio.com>
+
 	Use $(MAKE) instead of literal make; this way make can know that a
 	command will invoke make again. Knowing this will help make to schedule
 	parallel builds.
